# jeongisu-agent

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements.txt
backend/app/: agent.py  config.py  main.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: main.jsx  styles.css
notebook/: test.ipynb
src/: test.ipynb
